tests/snapshots/protocols__serialize__tests__func_arg_invalid_prot.snap
---
source: src/serialize.rs
expression: content
---
error: Assigning to undeclared symbol: c
  ┌─ tests/func_arg_invalid.prot:9:3
  │
9 │   c := b;
  │   ^ Assigning to undeclared symbol: c
